--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "displayName": "ariv-themes",
   "description": "A free, modern dark theme alternative to Vira/Material Themes.",
   "version": "0.0.1",
+  "publisher": "shubhamsharma",
   "engines": {
     "vscode": "^1.109.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ComputerKeeda/Ariv-Themes.git"
   },
   "categories": [
     "Themes"
