feat: Add Ariv Ocean color theme and update the editor background for Ariv Dark.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
         "label": "Ariv Dark",
         "uiTheme": "vs-dark",
         "path": "./themes/Ariv Dark-color-theme.json"
+      },
+      {
+        "label": "Ariv Ocean",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Ariv Ocean-color-theme.json"
       }
     ]
   }
