--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "publisher": "shubhamsharma",
   "engines": {
-    "vscode": "^1.109.0"
+    "vscode": "^1.108.0"
   },
   "repository": {
     "type": "git",
@@ -13,6 +13,10 @@
   },
   "categories": [
     "Themes"
+  ],
+  "main": "./extension.js",
+  "activationEvents": [
+    "*"
   ],
   "contributes": {
     "themes": [
@@ -27,5 +31,8 @@
         "path": "./themes/Ariv Ocean-color-theme.json"
       }
     ]
+  },
+  "dependencies": {
+    "@types/vscode": "^1.108.0"
   }
 }
