--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "categories": [
     "Themes"
   ],
+  "extensionPack": [
+    "PKief.material-icon-theme",
+    "Melishev.feather-product-icons"
+  ],
   "main": "./extension.js",
   "activationEvents": [
     "*"
