feat: Add extension icon and refine theme colors by adjusting foregrounds and disabling semantic highlighting.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "ariv-themes",
   "description": "A free, modern dark theme alternative to Vira/Material Themes.",
   "version": "0.0.1",
+  "icon": "icon.png",
   "publisher": "shubhamsharma",
   "engines": {
     "vscode": "^1.108.0"
